New changes (#12)
* Shutdown fast

* Change to order of releases

* Revert "Shutdown fast"

This reverts commit be2ea227718b19b00a0be0e59ec54bb87ffd5ea2.

* Remove all shutdown hook, we do not care about generator worlds

* Update README.md

* Fix typo

* Add OS-specific commands

* More code improvements

* Fix compilation

* Add job timeout

* Revert "Remove all shutdown hook, we do not care about generator worlds"

This reverts commit 44117795360c9d67fab15566e2fc6436bfe9ac6f.

* More aggressive server stopping